#342 fake loading ufo

--- a/slider/index.html
+++ b/slider/index.html
@@ -136,5 +136,10 @@
             </div>
             <!-- end of landscape -->
         </div>
+        
+        <div id="alert">
+            <div id="alert-loading"><img src="img/loading.gif"></div>
+            <div id="alert-content"></div>
+        </div>
     </BODY>
 </html>
