Add GlyphRendererApi and an interpolation-demo-application
Also, add metapolatorStandAlone.js which will be used by the UI-Team
Add facilities to MOM/_Node to listen to CPS-changes
Export one further static method via ExportController (simple drawing)

the red pill server and the red pill demo export now handle multiple
projects/entry points/main scripts

--- a/app/lib/html/red-pill.html
+++ b/app/lib/html/red-pill.html
@@ -33,7 +33,7 @@
     <!-- production
     <script> window.demoMode = true; </script>
     <link rel="stylesheet" type="text/css" href="main.css" />
-    <script src="main.js"></script>
+    <script src="redPillMain.js"></script>
     <!-- end of production -->
   </head>
   <body>
