#337 removing rubberband div when dragging outside panel

--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -114,6 +114,7 @@
 
                 <div id="panel-4" class="panel">
                     <designspace ng-controller="designspaceController" class="sub-panel semi-panel"></designspace>
+                    <specimen ng-controller="specimenController" class="sub-panel semi-panel"></specimen>
                 </div>
 
                 <!-- start of view 3 -->
