#353 new try for dividers

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -123,6 +123,8 @@
                 </underconstruction>
             </div>
             <!-- end of landscape -->
+            <divider id="divider-0" div="0"></divider>
+            <divider id="divider-1" div="1"></divider>
         </div>
         <!-- end of pagewrap -->
         
