--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -5,7 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <TITLE>Purple Pill</TITLE>
+        <TITLE>Metapolator - Demo</TITLE>
+        
+        <meta property="og:title" content="Metapolator - Demo" />
+        <meta property="og:type" content="website" />
+        <meta property="og:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
+        <meta property="og:url" content="http://metapolator.com/purple-pill" />
+        <meta property="og:image" content="http://metapolator.com/home/img/mp-logo.svg" />
 
         <!-- css -->
         <link rel="stylesheet" type="text/css" media="all" href="css/style.css">
