Set title for #362

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <TITLE>Metapolator - Demo</TITLE>
+        <TITLE>Metapolator – font editor for designing typeface families - Purple Pill Demo</TITLE>
         
         <meta property="og:title" content="Metapolator - Demo" />
         <meta property="og:type" content="website" />
