--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -104,7 +104,7 @@
         <div id="pagewrap" class="unselectable">
             <div id="landscape">
                 <div id="panel-1" class="panel">
-                    <parameters ng-controller="parametersController" class="sub-panel panel standard-padding"></parameters>
+                    <parameters ng-controller="parametersController" class="sub-panel panel"></parameters>
                 </div>
                 <specimen id="panel-2" ng-controller="specimenController" ng-init="addGlyphRange(); startEngine();" class="sub-panel panel"></specimen>
 
