--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -102,7 +102,7 @@
         <div id="pagewrap">
             <div id="landscape">
                 <div id="panel-1" class="panel">
-                    <parameters ng-controller="parametersController" class="sub-panel panel standard-padding"></parameters>
+                    <parameters ng-controller="parametersController" class="sub-panel panel"></parameters>
                 </div>
                 <specimen id="panel-2" ng-controller="specimenController" ng-init="addGlyphRange(); startFakeEngine();" class="sub-panel panel"></specimen>
 
