#337 update size rope (+ several other small stuff)

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -93,7 +93,7 @@
                         <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://twitter.com/metapolator" target="_blank">@metapolator</a></div>
                         <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://plus.google.com/communities/110027004108709154749" target="_blank">+metapolator</a></b></div>
                         <div class="lm-divider"></div>
-                        <div class="lm-button"><a title="To look behind the curtain and see the true underlying reality, take the red pill" href="http://metapolator.com/red-pill-demo/" target="_blank">Red Pill</a></b></div>
+                        <div class="lm-button"><a title="To look behind the curtain and see the true underlying reality, take the red pill" href="http://metapolator.com/red-pill-demo/" target="_blank">Open Tech View in new Tab</a></b></div>
                         </div>
                     </div>
                 </localmenu>
