--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -61,7 +61,7 @@
             <!-- end of project -->
             
             <div id="engine-mode">
-                You are currently in UI development mode. <a href="index.html" target="_self">Click</a> for red-pill mode.
+                <a href="index.html" target="_self">Real SVG's</a>
             </div>
 
             <div id="view-buttons">
@@ -91,7 +91,7 @@
                         <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://twitter.com/metapolator" target="_blank">@metapolator</a></div>
                         <div class="lm-button"><a title="To ask questions about usage or anything in general, post on our G+ Community page" href="https://plus.google.com/communities/110027004108709154749" target="_blank">+metapolator</a></div>
                         <div class="lm-divider"></div>
-                        <div class="lm-button"><a title="To look behind the curtain and see the true underlying reality, take the red pill" href="http://metapolator.com/red-pill-demo/" target="_blank">Red Pill</a></div>
+                        <div class="lm-button"><a title="To look behind the curtain and see the true underlying reality, take the red pill" href="http://metapolator.com/red-pill-demo/" target="_blank">Open Tech View in new Tab</a></div>
                         </div>
                     </div>
                 </localmenu>
