--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -109,13 +109,16 @@
                 <!-- start of view 2 -->
                 <div id="panel-3" class="panel">
                     <masters ng-controller="mastersController" class="list sub-panel semi-panel" type="master"></masters>
+                    <dividerHor style="top: 50%"></dividerHor>
                     <underconstruction class="sub-panel semi-panel">
                         COMING SOON:<br>ADJUSTMENT MASTERS
                     </underconstruction>
+                    
                 </div>
 
                 <div id="panel-4" class="panel">
                     <designspace ng-controller="designspaceController" class="sub-panel semi-panel"></designspace>
+                    <dividerHor style="top: 50%"></dividerHor>
                     <specimen ng-controller="specimenController" class="sub-panel semi-panel"></specimen>
                 </div>
 
