#353 horizontal dividers (index.html)

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -111,6 +111,7 @@
                 <!-- start of view 2 -->
                 <div id="panel-3" class="panel">
                     <masters ng-controller="mastersController" class="list sub-panel semi-panel" type="master"></masters>
+                    <dividerHor style="top: 50%"></dividerHor>
                     <underconstruction class="sub-panel semi-panel">
                         COMING SOON:<br>ADJUSTMENT MASTERS
                     </underconstruction>
