--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -17,15 +17,21 @@
         <link rel="stylesheet" type="text/css" media="all" href="css/style.css">
 
         <!-- jquery -->
+        <!--
         <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js'></script>
         <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js'></script>
         <link rel='stylesheet' href='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/themes/base/jquery-ui.css'>
+        -->
+        <script src="js/jquery.min.js" type="text/javascript"></script>
 
         <!-- fonts -->
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,900,300' rel='stylesheet' type='text/css'>
         
         <!-- Angular -->
+        <!--
         <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js' type='text/javascript'></script>
+        -->
+        <script src="js/angular.min.js" type="text/javascript"></script>
         <script src='js/app.js' type='text/javascript'></script>
         <script src='js/factory.js' type='text/javascript'></script>
         <script src='js/templates.js' type='text/javascript'></script>
@@ -106,7 +112,7 @@
                 <div id="panel-1" class="panel">
                     <parameters ng-controller="parametersController" class="sub-panel panel"></parameters>
                 </div>
-                <specimen id="panel-2" ng-controller="specimenController" ng-init="addGlyphRange(); startEngine();" class="sub-panel panel"></specimen>
+                <specimen id="panel-2" ng-controller="specimenController" ng-init="addGlyphRange(); startEngine(); specimenPanel = 1" class="sub-panel panel"></specimen>
 
                 <!-- start of view 2 -->
                 <div id="panel-3" class="panel">
@@ -119,6 +125,7 @@
 
                 <div id="panel-4" class="panel">
                     <designspace ng-controller="designspaceController" class="sub-panel semi-panel"></designspace>
+                    <specimen2 ng-controller="specimenController" ng-init="specimenPanel = 2"></specimen2>
                 </div>
 
                 <!-- start of view 3 -->
@@ -132,8 +139,10 @@
                 </underconstruction>
             </div>
             <!-- end of landscape -->
+            <!--
             <divider id="divider-0" div="0"></divider>
             <divider id="divider-1" div="1"></divider>
+            -->
         </div>
         <!-- end of pagewrap -->
         
