--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -114,9 +114,13 @@
                 <div id="panel-3" class="panel">
                     <masters ng-controller="mastersController" class="list sub-panel semi-panel" type="master"></masters>
                     <dividerHor style="top: 50%"></dividerHor>
-                    <underconstruction class="sub-panel semi-panel">
-                        COMING SOON:<br>ADJUSTMENT MASTERS
-                    </underconstruction>
+                    <div class="sub-panel semi-panel">
+                        <div class="panel-border">  
+                            <underconstruction>
+                                COMING SOON:<br>ADJUSTMENT MASTERS
+                            </underconstruction>
+                        </div>
+                    </div>
                 </div>
 
                 <div id="panel-4" class="panel">
@@ -130,9 +134,13 @@
                 <div id="panel-6" class="panel sub-panel standard-padding">
                 </div>
                 
-                <underconstruction id="panel-7" class="panel sub-panel">
-                    COMING SOON:<br>FAMILY EXPORT
-                </underconstruction>
+                <div id="panel-7" class="panel sub-panel">
+                    <div class="panel-border">
+                        <underconstruction>
+                            COMING SOON:<br>FAMILY EXPORT
+                        </underconstruction>
+                    </div>
+                </div>
             </div>
             <!-- end of landscape -->
             
