--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -131,8 +131,8 @@
                 <!-- start of view 3 -->
                 <instances id="panel-5" ng-controller="instancesController" class="list panel sub-panel" type="instance"></instances>
                 
-                <div id="panel-6" class="panel sub-panel standard-padding">
-                </div>
+                <fontexport id="panel-6" class="panel sub-panel standard-padding">
+                </fontexport>
                 
                 <div id="panel-7" class="panel sub-panel">
                     <div class="panel-border">
