adding the word "must" in the "Pre-Metapolating" section of the main matapolator webpage.

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ At the same time Peter Sikking paved the way for a graphical interface. Digging 
 <h1>Fonts designed for and with Metapolator</h1>
 <br>
 <em>Pre-Metapolating</em></br>
-Fonts can be prepared for optimal processing with Metapolator. Each glyph be broken up into its individual strokes, and each stroke should have an equal amount of paired points.
+Fonts can be prepared for optimal processing with Metapolator. Each glyph must be broken up into its individual strokes, and each stroke should have an equal amount of paired points.
 <p>
 <br>
 <img src="Latin.svg" alt="glyphs and parts" style="width: 700px">
