--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -49,9 +49,9 @@
         <!-- d3 JS -->
         <script src="js/d3-v3-min.js" charset="utf-8"></script>
 
-    </HEAD>
+    </head>
 
-    <BODY ng-app="Metapolator" ng-controller="engine" ng-init="engine()">
+    <body ng-app="Metapolator" ng-controller="engine" ng-init="engine()">
         <div id="menu" class="unselectable" ng-controller="menuController">
             <div id="project">
                 <localmenu class="localmenu" class="left">
@@ -201,6 +201,6 @@ $ google-chrome-stable --js-flags="--harmony --harmony_proxies"
                 </li>
             </ol>
         </div>
-    </BODY>
+    </body>
     <script src="js/metapolatorStandAlone.js"></script>
 </html>
