Update index.html html tag with namespace attributes

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Metapolator Neue</title>
@@ -201,12 +201,11 @@ Metapolator is extensible through plugins and custom specimens. It contains all 
 </div>
 
 <p>
-<h1>Approaching our Project Vision</h1>
+<h1>Project Status</h1>
 <br>
-<em>Red Pill and Blue Pill</em></br>
-In May 2014 the metapolator team has started to develop a professional version based on last year’s <a href="http://metapolator.tumblr.com/" title="Metapolator prototypes">prototypes</a>. Under the hood, Lasse Fister has developed <a href="http://metapolator.com/red-pill-demo/" title="Red Pill">Red Pill</a>, a developer interface with a unique system to work with parameters <a href="https://github.com/metapolator/metapolator/wiki/cascading-parameter-sheets" title="cascading parameter sheets">(CPS)</a> together with <a href="http://lib.ufojs.org/" title="ufo.js">ufo.js</a>. We completely left out <a href="http://en.wikipedia.org/wiki/Metafont" title="Metafont">Metafont</a> this time, but kept most of its functionality and concepts like the brilliant Hobby Spline.
+In May 2014 the Metapolator team moved away from last year’s <a href="http://metapolator.tumblr.com/" title="Metapolator prototypes">prototypes</a> and began to develop a new program from scratch that runs entirely in the browser. Under the hood, Lasse Fister developed the <a href="https://github.com/metapolator/metapolator/wiki/cascading-properties-sheets" title="cascading properties sheets">Cascading Properties Sheets</a>, a text interface to work with parameters similar to CSS, and improved <a href="http://lib.ufojs.org/" title="ufo.js">ufo.js</a>. We completely left out <a href="http://en.wikipedia.org/wiki/Metafont" title="Metafont">Metafont</a> this time, but kept technologies like the brilliant Hobby Spline.
 <p>
-At the same time Peter Sikking laid out the cornerstones for the User Interface Architecture which is serving now as the design of the new User Interface (which is under heavy development right now). Digging from both sides under the Mt. Metapolator, we hope we can present Blue Pill, a version 1.0 by the end of the year. In the meantime we can share our last <a href="http://www.metapolator.com/pre.html" title="We Need Fonts">presentation</a> and welcome you on our <a href="https://plus.google.com/communities/110027004108709154749" title="Metapolator G+ community">G+</a> community.
+At the same time Peter Sikking paved the way for a graphical interface. Digging from both sides under the Mount Metapolator, we hope we can present a useful prototype at the <a href="http://libregraphicsmeeting.org">Libre Graphics Meeting 2015</a>. In the meantime you can see our presentation of <a href="http://www.metapolator.com/pre.html" title="We Need Fonts">Metapolator at LGM 2014</a> and welcome you to our <a href="https://plus.google.com/communities/110027004108709154749" title="Metapolator G+ community">Metapolator G+ community</a>.
 
 
 <center></br></br>* * *</br></center>
@@ -214,14 +213,14 @@ At the same time Peter Sikking laid out the cornerstones for the User Interface 
 <h1>Fonts designed for and with Metapolator</h1>
 <br>
 <em>Pre-Metapolating</em></br>
-Fonts need to be prepared in a certain way so the can be processed with Metapolator. For example, every glyph needs to show up an equal amount of pair points. One way to achieve this is to break up a glyph into its individual parts and strokes. As soon we're ready with beta testing we will show several user cases.
+Fonts can be prepared for optimal processing with Metapolator. Each glyph must be broken up into its individual strokes, and each stroke should have an equal amount of paired points.
 <p>
 <br>
 <img src="Latin.svg" alt="glyphs and parts" style="width: 700px">
 <br>
 <br>
-<em>New Fontfamilies</em></br>
-<a href="http://weiweihuanghuang.github.io/Alice-Devanagari/" title="Alice">Alice</a>, <a href="https://github.com/metapolator/sean" title="Sean Sans">Sean Sans</a> and <a href="https://github.com/metapolator/Breite" title="Breite">Breite</a> are being developed as the first true Metapolator font families.
+<em>New Families</em></br>
+<a href="http://weiweihuanghuang.github.io/Work-Sans/" title="Work Sans">Work Sans</a>, <a href="https://github.com/metapolator/sean" title="Sean Sans">Sean Sans</a> and <a href="https://github.com/metapolator/Breite" title="Breite">Breite</a> are being developed as the first true Metapolator font families.
 <br>
 <p>
 <br>
