--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -129,6 +129,7 @@
 
                 <div id="panel-4" class="panel">
                     <designspace ng-controller="designspaceController" class="sub-panel semi-panel"></designspace>
+                    <dividerHor style="top: 50%"></dividerHor>
                     <specimen2 ng-controller="specimenController" class="sub-panel semi-panel" ng-init="specimenPanel = 2"></specimen2>
                 </div>
 
