Added link to the .ico

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -15,6 +15,7 @@
         <meta property="og:image" content="/purple-pil/favicon/metapolator.png" />
 
         <!-- Favicons -->
+        <link rel="icon" href="/purple-pill/favicon/favicon.ico">
         <link rel="apple-touch-icon" sizes="57x57" href="/purple-pil/favicon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/purple-pil/favicon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/purple-pil/favicon/apple-touch-icon-72x72.png">
