--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -65,6 +65,7 @@
         <script src='js/directives/control.js' type='text/javascript'></script> 
         <script src='js/directives/dividers.js' type='text/javascript'></script> 
         <script src='js/directives/directives.js' type='text/javascript'></script>
+        <script src='js/directives/rubberband.js' type='text/javascript'></script>
         <script src='js/directives/sortable.js' type='text/javascript'></script>
         <script src='js/functions.js'></script>
         
