--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -66,6 +66,7 @@
         <script src='js/directives/dividers.js' type='text/javascript'></script> 
         <script src='js/directives/directives.js' type='text/javascript'></script>
         <script src='js/directives/sortable.js' type='text/javascript'></script>
+        <script src='js/directives/rubberband.js' type='text/javascript'></script>
         <script src='js/functions.js'></script>
         
         <!-- d3 JS -->
