--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -44,7 +44,7 @@
         <link rel='stylesheet' href='js/jquery/jquery-ui.css'>
 
         <!-- fonts -->
-        <!--<link href='http://fonts.googleapis.com/css?family=Roboto:400,700,900,300' rel='stylesheet' type='text/css'>-->
+        <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,900,300' rel='stylesheet' type='text/css'>
         
         <!-- Angular -->
         <script src="js/angular/angular.min.js" type="text/javascript"></script>
@@ -166,7 +166,7 @@
                 </fontexport>
                 
                 <div id="panel-6" class="panel sub-panel" ng-style="{'width': 'calc(' + (data.view.panels[6] / data.view.totalPanelParts) + '* 100%)'}">
-                    <div class="panel-border">
+                    <div class="panel-border panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
                                 coming soon:<br>Family Export
