#408 corrected some borders

--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -131,13 +131,11 @@
                     <parameters ng-controller="parametersController" class="sub-panel semi-panel"></parameters>
                     <dividerHor style="top: 50%"></dividerHor>
                     <div class="sub-panel semi-panel">
-                        <div class="panel-border">  
-                            <underconstruction>
-                                <div class="bottom-text">
-                                    coming soon:<br>More Parameters
-                                </div>
-                            </underconstruction>
-                        </div>
+                        <underconstruction>
+                            <div class="bottom-text">
+                                coming soon:<br>More Parameters
+                            </div>
+                        </underconstruction>
                     </div>
                 </div>
                 
@@ -149,13 +147,11 @@
                     <masters ng-controller="mastersController" class="list sub-panel semi-panel" type="master"></masters>
                     <dividerHor style="top: 50%"></dividerHor>
                     <div class="sub-panel semi-panel">
-                        <div class="panel-border">  
-                            <underconstruction>
-                                <div class="bottom-text">
-                                    coming soon:<br>Adjustment Masters
-                                </div>
-                            </underconstruction>
-                        </div>
+                        <underconstruction>
+                            <div class="bottom-text">
+                                coming soon:<br>Adjustment Masters
+                            </div>
+                        </underconstruction>
                     </div>
                 </div>
 
@@ -172,7 +168,7 @@
                 </fontexport>
                 
                 <div id="panel-6" class="panel sub-panel" ng-style="{'width': 'calc(' + (data.view.panels[6] / data.view.totalPanelParts) + '* 100%)'}">
-                    <div class="panel-border panel-border-without-menu">
+                    <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
                                 coming soon:<br>Family Export
