--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -127,13 +127,11 @@
                     <parameters ng-controller="parametersController" class="sub-panel semi-panel"></parameters>
                     <dividerHor style="top: 50%"></dividerHor>
                     <div class="sub-panel semi-panel">
-                        <div class="panel-border">  
-                            <underconstruction>
-                                <div class="bottom-text">
-                                    coming soon:<br>Adjustment Masters
-                                </div>
-                            </underconstruction>
-                        </div>
+                        <underconstruction>
+                            <div class="bottom-text">
+                                coming soon:<br>Adjustment Masters
+                            </div>
+                        </underconstruction>
                     </div>
                 </div>
                 <specimen id="panel-1" ng-controller="specimenController" ng-init="addGlyphRange(); specimenPanel = 1" class="sub-panel panel" ng-style="{'width': 'calc(' + (data.view.panels[1] / data.view.totalPanelParts) + '* 100%)'}"></specimen>
@@ -143,13 +141,11 @@
                     <masters ng-controller="mastersController" class="list sub-panel semi-panel" type="master"></masters>
                     <dividerHor style="top: 50%"></dividerHor>
                     <div class="sub-panel semi-panel">
-                        <div class="panel-border">  
-                            <underconstruction>
-                                <div class="bottom-text">
-                                    coming soon:<br>Adjustment Masters
-                                </div>
-                            </underconstruction>
-                        </div>
+                        <underconstruction>
+                            <div class="bottom-text">
+                                coming soon:<br>Adjustment Masters
+                            </div>
+                        </underconstruction>
                     </div>
                 </div>
 
@@ -166,7 +162,7 @@
                 </fontexport>
                 
                 <div id="panel-6" class="panel sub-panel" ng-style="{'width': 'calc(' + (data.view.panels[6] / data.view.totalPanelParts) + '* 100%)'}">
-                    <div class="panel-border panel-border-without-menu">
+                    <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
                                 coming soon:<br>Family Export
