--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -129,7 +129,7 @@
                     <div class="sub-panel semi-panel">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>Adjustment Masters
+                                coming soon:<br>More Parameters
                             </div>
                         </underconstruction>
                     </div>
