Full path for image url and better title.

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -8,11 +8,11 @@
         <title>Metapolator – Font Editor for Designing Typeface Families - Purple Pill Demo</title>
         <meta name="description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time.">
 
-        <meta property="og:title" content="Metapolator - Demo" />
+        <meta property="og:title" content="Metapolator – Font Editor for Designing Typeface Families" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
         <meta property="og:url" content="http://metapolator.com/purple-pill" />
-        <meta property="og:image" content="/purple-pill/favicon/metapolator.png" />
+        <meta property="og:image" content="http://metapolator.com/purple-pill/favicon/metapolator.png" />
 
         <!-- Favicons -->
         <link rel="icon" href="/purple-pill/favicon/favicon.ico">
