--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Metapolator – Font Editor for Designing Typeface Families - Purple Pill Demo</title>
+        <title>Metapolator – Free Font Editor for Designing Typeface Families - Purple Pill Demo</title>
         <meta name="description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time.">
 
-        <meta property="og:title" content="Metapolator – Font Editor for Designing Typeface Families" />
+        <meta property="og:title" content="Metapolator – Free Font Editor for Designing Typeface Families" />
         <meta property="og:type" content="website" />
         <meta property="og:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
         <meta property="og:url" content="http://metapolator.com/purple-pill" />
