Change coming soon message on export panel

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -119,7 +119,7 @@
                     <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>Family Export
+                                coming soon:<br>Export Controls
                             </div>
                         </underconstruction>
                     </div>
