Add missing twitter card metadata tags

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -18,11 +18,14 @@
         <meta name="twitter:card" content="product">
         <meta name="twitter:site" content="@metapolator">
         <meta name="twitter:creator" content="@metapolator">
-        <meta name="twitter:title" content="Metapolator is a Free Font Editor for Designing Typeface Families">
-        <meta name="twitter:description" content="Support the project and buy a fine T Shirt" />
+        <meta name="twitter:title" content="Metapolator">
+        <meta name="twitter:description" content="Free Font Editor for Designing Typeface Families" />
         <meta name="twitter:image" content="http://metapolator.com/purple-pill/favicon/metapolator.png">
-        <meta name="twitter:url" content="http://teespring.com/metapolator-beta-0-3-0" />
-
+        <meta name="twitter:data1" content="Support the project and buy a fine T Shirt" />
+        <meta name="twitter:label1" content="Men, Women and Long Sleeve options" />
+        <meta name="twitter:data2" content="US$20" />
+        <meta name="twitter:label2" content="+ shipping" />
+        
         <!-- Favicons -->
         <link rel="icon" href="/purple-pill/favicon/favicon.ico">
         <link rel="apple-touch-icon" sizes="57x57" href="/purple-pill/favicon/apple-touch-icon-57x57.png">
