--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -15,13 +15,13 @@
         <meta property="og:image" content="http://metapolator.com/purple-pill/favicon/metapolator.png" />
         
         <!-- Twitter Card -->
-        <meta name="twitter:card" content="product">
+        <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@metapolator">
         <meta name="twitter:creator" content="@metapolator">
-        <meta name="twitter:title" content="Metapolator is a Free Font Editor for Designing Typeface Families">
-        <meta name="twitter:description" content="Support the project and buy a fine T Shirt" />
+        <meta name="twitter:title" content="Metapolator – Free Font Editor for Designing Typeface Families">
+        <meta name="twitter:description" content="Metapolator is an open web tool for making many fonts. It supports working in a font design space, instead of one glyph, one face, at a time." />
         <meta name="twitter:image" content="http://metapolator.com/purple-pill/favicon/metapolator.png">
-        <meta name="twitter:url" content="http://teespring.com/metapolator-beta-0-3-0" />
+        <meta name="twitter:url" content="http://metapolator.com/purple-pill" />
 
         <!-- Favicons -->
         <link rel="icon" href="/purple-pill/favicon/favicon.ico">
