Caps Comming Soon

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -95,7 +95,7 @@
                     <div class="sub-panel semi-panel">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>More Parameters
+                                Coming Soon:<br>More Parameters
                             </div>
                         </underconstruction>
                     </div>
@@ -109,7 +109,7 @@
                     <div class="sub-panel semi-panel">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>Adjustment Masters
+                                Coming Soon:<br>Adjustment Masters
                             </div>
                         </underconstruction>
                     </div>
@@ -131,7 +131,7 @@
                     <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>Edit Metadata
+                                Coming Soon:<br>Edit Metadata
                             </div>
                         </underconstruction>
                     </div>
