--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -83,7 +83,7 @@
                     <div class="sub-panel semi-panel">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>More Parameters
+                                Coming Soon:<br>More Parameters
                             </div>
                         </underconstruction>
                     </div>
@@ -99,7 +99,7 @@
                     <div class="sub-panel semi-panel">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>Adjustment Masters
+                                Coming Soon:<br>Adjustment Masters
                             </div>
                         </underconstruction>
                     </div>
@@ -121,7 +121,7 @@
                     <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
-                                coming soon:<br>Family Export
+                                Coming Soon:<br>Family Export
                             </div>
                         </underconstruction>
                     </div>
