--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -46,7 +46,7 @@
 
         <!-- css -->
         <link rel="stylesheet" type="text/css" media="all" href="css/style.css">
-        <link rel="stylesheet" type="text/css" media="all" href="../bower_components/ngprogress/ngProgress.css">
+        <link rel="stylesheet" type="text/css" media="all" href="bower_components/ngprogress/ngProgress.css">
 
         <!-- jquery -->
         <script src='js/jquery/jquery.min.js'></script>
@@ -55,7 +55,7 @@
         
         <!-- Angular -->
         <script src="js/angular/angular.min.js" type="text/javascript"></script>
-        <script src='../bower_components/ngprogress/build/ngProgress.js' type='text/javascript'></script>
+        <script src='bower_components/ngprogress/build/ngProgress.js' type='text/javascript'></script>
         <script src='js/app.js' type='text/javascript'></script>
         <script src='js/factory.js' type='text/javascript'></script>
         <script src='js/templates.js' type='text/javascript'></script>
