#337 prevent short word at end in Strict 3

--- a/purple-pill/index2.html
+++ b/purple-pill/index2.html
@@ -45,6 +45,7 @@
         
         <!-- Angular -->
         <script src="js/angular/angular.min.js" type="text/javascript"></script>
+        <script src='../bower_components/ngprogress/build/ngProgress.js' type='text/javascript'></script>
         <script src='js/app.js' type='text/javascript'></script>
         <script src='js/factory.js' type='text/javascript'></script>
         <script src='js/templates.js' type='text/javascript'></script>
