fix issue #496 (placing the progressbar inside div "#panel-6")

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -130,8 +130,9 @@
                     <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
-                                Coming Soon:<br>Edit Metadata
+                                Coming Soon:<br>Edit Metadata<br><br>
                             </div>
+                            <div id="export-progressbar"></div>
                         </underconstruction>
                     </div>
                 </div>
