Export: Remove BR BR

--- a/purple-pill/index.html
+++ b/purple-pill/index.html
@@ -130,7 +130,7 @@
                     <div class="panel-border-without-menu">
                         <underconstruction>
                             <div class="bottom-text">
-                                Coming Soon:<br>Edit Metadata<br><br>
+                                Coming Soon:<br>Edit Metadata
                             </div>
                             <div id="export-progressbar"></div>
                         </underconstruction>
